openshift/ingress/ef-ott-ingress-auth-filter.yml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ef-ott-ingress-auth-filter
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.ext_authz
          config:
            failure_mode_allow: false
            grpc_service:
              google_grpc:
                stat_prefix: ext_authz
                target_uri: 'unix:/mnt/ott-uds-socket/ott.socket'
              timeout: 2s
            with_request_body:
              allow_partial_message: true
              max_request_bytes: 16777216
      match:
        listener:
          filterChain:
            filter:
              name: envoy.http_connection_manager
          portNumber: ${INGRESS_HOST_OTT_PORT}
        context: GATEWAY
  workloadSelector:
    labels:
      app: ingress-${NAMESPACE}
