openshift/ingress/vs-ingressgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-ingressgateway
spec:
  exportTo:
    - .
  gateways:
    - gw-ingressgateway
  hosts:
    - ${INGRESS_HOST_TLS}
    - ${INGRESS_HOST_GEO_TLS}
    - ${INGRESS_HOST_OTT}
    - ${INGRESS_HOST_GEO_OTT}
  http:
    - match:
        - uri:
            prefix: /antifraud/
      rewrite:
        uri: /
      route:
        - destination:
            host: svc-antifraud
            port:
              number: 8080
          weight: 100
